# vivy

./: .gitignore  LICENSE  README.md  justfile  mkdocs.yml  pyproject.toml
docs/: book.toml  index.md
docs/api/: index.md
docs/css/: material.css
docs/guide/: install.md
src/vivy/: __init__.py
tests/: scalar_test.py
